refactor: update daemonizer version